--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8020
 spring.thymeleaf.cache=false
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/eshop?useSSL=false}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/eshop?useSSL=false&createDatabaseIfNotExist=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
