change database to rds aws online

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,31 @@
+#server.port=8020
+#spring.thymeleaf.cache=false
+#
+#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/eshop?useSSL=false&createDatabaseIfNotExist=true}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:123456}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#
+#
+#spring.jpa.open-in-view=false
+#spring.jpa.show-sql=true
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#
+##Custom
+##number of items loaded on index
+#articleservice.featured-items-number=8
+
+
+
 server.port=8020
 spring.thymeleaf.cache=false
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/eshop?useSSL=false&createDatabaseIfNotExist=true}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:123456}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://database-blog-app-apis-rds.cxh69alkejfo.us-east-1.rds.amazonaws.com:3306/hieule?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=12345678
 
 
 
@@ -17,6 +38,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #Custom
 #number of items loaded on index
 articleservice.featured-items-number=8
+
 
 
 
